src/objects/WWP_LossTree_Suppliers__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Loss_Description__c</fullName>
        <label>Loss Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Name__c</fullName>
        <label>Loss Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Sub_Family__c</fullName>
        <label>Loss Sub-Family</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Type__c</fullName>
        <label>Loss Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>WWP_LossTree_Suppliers</label>
</CustomObject>